--- a/src/Verify.ExceptionParsing.Tests/Verify.ExceptionParsing.Tests.csproj
+++ b/src/Verify.ExceptionParsing.Tests/Verify.ExceptionParsing.Tests.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\Verify.ExceptionParsing\Verify.ExceptionParsing.csproj" />
     <ProjectReference Include="..\Verify.Xunit\Verify.Xunit.csproj" />
     <ProjectReference Include="..\Verify\Verify.csproj" />
+    <PackageReference Include="Meziantou.Xunit.ParallelTestFramework" Version="1.0.0" />
   </ItemGroup>
   <Import Project="$(ProjectDir)..\Verify\buildTransitive\Verify.props" />
   <Import Project="$(ProjectDir)..\Verify\buildTransitive\Verify.targets" />
