--- a/src/Verify.Xunit.Tests/Verify.Xunit.Tests.csproj
+++ b/src/Verify.Xunit.Tests/Verify.Xunit.Tests.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\TargetLibrary\TargetLibrary.csproj" />
     <ProjectReference Include="..\Verify.Xunit\Verify.Xunit.csproj" />
     <ProjectReference Include="..\Verify\Verify.csproj" />
+    <PackageReference Include="Meziantou.Xunit.ParallelTestFramework" Version="1.0.0" />
     <Folder Include="Scrubbers\" />
   </ItemGroup>
   <Import Project="$(ProjectDir)..\Verify\buildTransitive\Verify.props" />
